--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,11 +46,11 @@ jobs:
           mlflow run MLproject/ --env-manager=local
 
       - name: Get latest MLflow run_id
+        id: get_run_id
         run: |
           RUN_ID=$(find mlruns/0 -maxdepth 1 -mindepth 1 -type d -exec basename {} \; | grep -E '^[a-f0-9]{32}$' | head -n 1)
           echo "RUN_ID=$RUN_ID" >> $GITHUB_ENV
           echo "Latest run_id: $RUN_ID"
-
 
       - name: Build Docker Model Image
         run: |
